<resources>
    <string name="app_name">CookItRite</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="title_activity_sign_up_activity">Create Account</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_tabing">MainTabingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_image">Meal Image</string>
    <string name="upload_meal_image">Upload Meal Image</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="added_this_meal">added this meal</string>
    <string name="username">Username</string>
    <string name="listed_recipes_for_user">Listed Recipes For User</string>
    <string name="title_activity_ingredients__methods">Enter Ingredients and Methods</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="enter_methods">Enter Methods</string>

    <string-array name="Measure_type">
        <item>cup</item>
        <item>lb</item>
        <item>gram</item>
        <item>kg</item>
        <item>liter</item>
        <item>ml</item>
        <item>oz</item>
        <item>pint</item>
        <item>tsp</item>
        <item>tbsp</item>
    </string-array>
    <string name="title_activity_view_meal">ViewMealActivity</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
</resources>
