<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_weight="1"
            android:contentDescription="@string/meal_image"
            app:srcCompat="@drawable/meal_placeholder"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"></ImageView>


    <Button
            android:id="@+id/meal_pic_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="24dp"
            android:shadowColor="@android:color/darker_gray"
            android:text="@string/upload_meal_image"
            android:textColor="@color/colorPrimary"
            android:focusable="true"
            tools:targetApi="lollipop"/>
    <LinearLayout
            android:id="@+id/section_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintVertical_bias="0.759" tools:ignore="MissingConstraints"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:weightSum="1">

        <TextView
                android:id="@+id/mealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_recipe_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" tools:targetApi="o"/>

    </LinearLayout>
</LinearLayout>